--- a/public/partials/musica.html
+++ b/public/partials/musica.html
@@ -4,7 +4,7 @@
             <div class="panel">
                 <div class="panel-body">
                     <div class="col-sm-6">
-                        <img style="height: 200px;" src="http://es.members.cdbaby.com/images/uploader/servicentro/albumart.jpg" alt="Kilómetro 1">
+                        <img style="height: 200px;" src="https://cdbaby.name/s/e/servicentro_large.jpg" alt="Kilómetro 1">
                         <h4 class="std-font">Kilómetro 1</h4>
                     </div>
                     <div class="col-sm-6">
