--- a/public/partials/letra.html
+++ b/public/partials/letra.html
@@ -21,13 +21,15 @@
                                         <br>Quise respetarla quise comprenderla pero soy gusano bacán
                                     </p>
                                     <p class="text-center">
-                                        Acuérdate de mí
-                                        <br>Dios acuérdate de mí
+                                        Acuérdate de mí, Dios acuérdate de mí
                                     </p>
                                     <p class="text-center">
                                         <em>(Coro)</em>
                                         <br>Esa rebeldía tonta de una niña que recién comienza a pecar
                                         <br>Es cierto que nada es como lo pintan y a ti no te pintan más
+                                    </p>
+                                    <p class="text-center">
+                                        Eres un gusano bacán
                                     </p>
                                     <p class="text-center">
                                         Grandes pensadores, químicos y flores no me pueden ayudar
@@ -43,7 +45,7 @@
                                         <br>Esa rebeldía tonta de una niña que recién comienza a pecar
                                         <br>Es cierto que nada es como lo pintan y a ti no te pintan más
                                         <br>Esa rabia enferma que llevan mis venas puede tener mejor final
-                                        <br>La saco de adentro, la llevo hacia el cielo sin dañar a los demás
+                                        <br>La saco de adentro, la llevo hasta el cielo sin dañar a los demás
                                     </p>
                                     <p class="text-center">
                                         <em>(Solo)</em>
@@ -53,7 +55,7 @@
                                         <br>Esa rebeldía tonta de una niña que recién comienza a pecar
                                         <br>Es cierto que nada es como lo pintan y a ti no te pintan más
                                         <br>Esa rabia enferma que llevan mis venas puede tener mejor final
-                                        <br>La saco de adentro, la llevo hacia el cielo sin dañar a los demás
+                                        <br>La saco de adentro, la llevo hasta el cielo sin dañar a los demás
                                     </p>
                                 </div>
                             </div>
@@ -123,7 +125,7 @@
                                 <div class="panel-body panel-letra no-border">
                                     <p class="text-center">
                                         Disculpe la pretensión, no quisiera ofenderte
-                                        <br>Pero siendo sincero, tiempo sin verte
+                                        <br>Pero siendo sincera, tiempo sin verte
                                         <br>Desde un rato a esta parte me han venido siguiendo
                                         <br>Buscando sofocarme como si fuera incendio
                                     </p>
@@ -182,13 +184,13 @@
                                         Cada vez que te busqué, acortando las distancias
                                         <br>El destino me cayó como paloma en la espalda
                                         <br>Si es difícil ser tu amigo, cómo voy a estar contigo
-                                        <br>si es difícil ser tu amigo, cómo voy a estar contigo
+                                        <br>Si es difícil ser tu amigo, cómo voy a estar contigo
                                     </p>
                                     <p class="text-center">
                                         Si vamos a confesar, nadie tiene la paciencia
                                         <br>De correr para ganar hasta llegar a la meta
                                         <br>Y tú te apareces para tirar la primera piedra
-                                        <br>y tú te apareces para tirar la primera piedra
+                                        <br>Y tú te apareces para tirar la primera piedra
                                     </p>
                                     <p class="text-center">
                                         <em>(Coro)</em>
@@ -199,7 +201,7 @@
                                         Ahora me toca hablar y ya me estoy acordando
                                         <br>De una historia singular cuando te llevé en mis brazos
                                         <br>Sólo un par de huellas en la arena y pa’ que sigo hablando
-                                        <br>sólo un par de huellas en la arena y pa’ que sigo hablando
+                                        <br>Sólo un par de huellas en la arena y pa’ que sigo hablando
                                     </p>
                                     <p class="text-center">
                                         <em>(Coro)</em>
@@ -325,7 +327,9 @@
                                         <br>Bendito aquel que encuentre
                                         <br>Alberto Hurtado lleva a Dios
                                         <br>En camioneta verde
-                                        <br>Somos los hijos del amor
+                                    </p>
+                                    <p class="text-center">
+                                        Somos los hijos del amor
                                         <br>Bendito aquel que encuentre
                                         <br>Alberto Hurtado lleva a Dios
                                         <br>En camioneta verde
@@ -348,14 +352,16 @@
                                         Perdón señor, si lo que canto no es válido para usted
                                         <br>O si toco en lo más hondo de su ser
                                         <br>¿Y qué hay? Dirá usted, dirá usted
-                                        <br>Alguien me contó, que solo piensa en el trabajo y en el deber
+                                    </p>
+                                    <p class="text-center">
+                                        Alguien me contó, que solo piensa en el trabajo y en el deber
                                         <br>Que sufre por el dinero que se fue
                                         <br>¿Y qué hay? Dirá usted, mire usted
                                     </p>
                                     <p class="text-center">
                                         <em>(Coro)</em>
                                         <br>Yo le diré, que el presente y el pasado no puede perder
-                                        <br>Que el futuro es importante por lo que no fue, mire usted.
+                                        <br>Que el futuro es importante por lo que no fue, mire usted
                                     </p>
                                     <p class="text-center">
                                         Alguien me contó, que solo piensa en un producto para vender
@@ -367,7 +373,7 @@
                                         <br>Yo le diré, que el presente y el pasado no puede perder
                                         <br>que el futuro es importante por lo que no fue, mire usted
                                         <br>Le encantará darse cuenta que su vida no termina acá
-                                        <br>Que hay una emoción que grita en la profundidad de su ser.
+                                        <br>Que hay una emoción que grita en la profundidad de su ser
                                     </p>
                                     <p class="text-center">
                                         <em>(Solo)</em>
@@ -377,7 +383,7 @@
                                         <br>Yo le diré, que el presente y el pasado no puede perder
                                         <br>Que el futuro es importante por lo que no fue, mire usted
                                         <br>Le encantará darse cuenta que su vida no termina acá
-                                        <br>Que hay una emoción que grita en la profundidad de su ser.
+                                        <br>Que hay una emoción que grita en la profundidad de su ser
                                     </p>
                                     <p class="text-center">
                                         Cita con Dios el martes a las seis
@@ -416,7 +422,7 @@
                                     </p>
                                     <p class="text-center">
                                         En el mall de las almas, las vitrinas hermosas, llenas de color
-                                        <br>Te deslumbran y atrapan, con ofertas baratas de contradicción
+                                        <br>Me deslumbran y atrapan, con ofertas baratas de contradicción
                                     </p>
                                     <p class="text-center">
                                         Amanezco con calma, por la tarde no parezco yo, la cara me cambió
@@ -521,9 +527,11 @@
                                     <p class="text-center">
                                         Y si de pronto sientes que algo te ha tapado el sol
                                         <br>Y una sombra eclipsa tu interior
-                                        <br>Si hoy no ves la luz y vagas ciego y sin razón
+                                        <br>Si no ves la luz y vagas ciego y sin razón
                                         <br>Enciende tu propio corazón
-                                        <br>Que aún a solas en tu noche tus estrellas te verán
+                                    </p>
+                                    <p class="text-center">
+                                        Que aún a solas en tu noche tus estrellas se verán
                                         <br>Como a un sol brillando en su calor
                                         <br>Al sentir que el universo es el más grande acto de amor
                                         <br>Y tú estás llamado a esta función
@@ -540,7 +548,9 @@
                                         <br>Despacito y sin mirar atrás
                                         <br>Que hay más de un momento que espera en más de un lugar
                                         <br>Dibujando otra oportunidad
-                                        <br>Y tú tienes los colores más hermosos pa pintar
+                                    </p>
+                                    <p class="text-center">
+                                        Y tú tienes los colores más hermosos pa' pintar
                                         <br>La ocasión y en plena libertad
                                         <br>Descubrir que el horizonte es más amplio que el rencor
                                         <br>Y aceptar lo humano del error
@@ -557,11 +567,15 @@
                                         <br>Te ilumina con su resplandor
                                         <br>Goza en el secreto y crece hasta la humildad
                                         <br>Que el mundo espera por tu amor
-                                        <br>Por los campos y ciudades, en la guerra o en la paz
+                                    </p>
+                                    <p class="text-center">
+                                        Por los campos y ciudades, en la guerra o en la paz
                                         <br>En los muros o el baño de algún bar
-                                        <br>Por desiertos estelares desde ti a la inmensidad
+                                        <br>Por desiertos estelares desde aqui a la inmensidad
                                         <br>Más allá de la imaginación
-                                        <br>Al que vive la desgracia, al solitario en su temor
+                                    </p>
+                                    <p class="text-center">
+                                        Y al que vive en la desgracia, solitario en su temor
                                         <br>Con amor le canto esta canción
                                         <br>Al rebelde y al tirano y al que vive del terror
                                         <br>Con amor escuchen el clamor
@@ -572,6 +586,15 @@
                                         <br>Así tan simplemente con amor
                                         <br>Con amor
                                         <br>La misma propia vida es la razón
+                                    </p>
+                                    <p class="text-center">
+                                        <em>(Coro)</em>
+                                        <br>Con amor
+                                        <br>Así tan simplemente con amor
+                                        <br>Con amor
+                                    </p>
+                                    <p class="text-center">
+                                        La misma propia vida es la razón
                                     </p>
                                 </div>
                             </div>
