--- a/public/partials/musica.html
+++ b/public/partials/musica.html
@@ -1,13 +1,17 @@
 ﻿<section id="musica" class="fondo container-fluid fondoMusica">
     <div class="row">
-        <div class="col-sm-offset-2 col-sm-8">
-            <div class="panel">
+        <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8">
+            <div class="panel text-center">
                 <div class="panel-body">
+                    <div class="col-sm-6 hidden-xs">
+                        <iframe src="https://open.spotify.com/embed?uri=spotify:album:11Y5PkMkyJxPxeMQq8ZudQ" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+                    </div>
+                    <div class="col-sm-6 hidden-sm hidden-md hidden-lg">
+                        <iframe src="https://open.spotify.com/embed?uri=spotify:album:11Y5PkMkyJxPxeMQq8ZudQ" width="300" height="80" frameborder="0" allowtransparency="true"></iframe>
+                    </div>
                     <div class="col-sm-6">
                         <img style="height: 200px;" src="https://cdbaby.name/s/e/servicentro_large.jpg" alt="Kilómetro 1">
                         <h4 class="std-font">Kilómetro 1</h4>
-                    </div>
-                    <div class="col-sm-6">
                         <div>
                             <span class="std-font">Disco Físico</span>
                         </div>
