Creative Commons BY NC ND

--- a/public/partials/footer-sitio.html
+++ b/public/partials/footer-sitio.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <span class="copyright">Copyright &copy; Servicentro 2016</span>
+                <span class="copyright"><i class='fa fa-creative-commons'></i>BY NC ND Servicentro 2017</span>
             </div>
             <div class="col-md-4">
                 <ul class="list-inline social-buttons">
